--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AWS App Runner Hands-on for JAWS-UG Niigata",
   "main": "index.js",
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   }
